--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cytoscape-spread",
   "version": "1.3.0",
   "description": "The Spread physics simulation layout for Cytoscape.js",
-  "main": "src/index.js",
+  "main": "cytoscape-spread.js",
   "spm": {
     "main": "cytoscape-spread.js"
   },
